--- a/Unidade6/Unidade6.csproj
+++ b/Unidade6/Unidade6.csproj
@@ -41,11 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exercicios Complementares\Exercicio1.cs" />
+    <Compile Include="Exercicios Complementares\Exercicio2.cs" />
+    <Compile Include="Exercicios Complementares\Exercicio3.cs" />
+    <Compile Include="Exercicios Complementares\Exercicio4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Exercicios de Fixação\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
