--- a/Unidade6/Unidade6.csproj
+++ b/Unidade6/Unidade6.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Exercicios Complementares\Exercicio3.cs" />
     <Compile Include="Exercicios Complementares\Exercicio4.cs" />
     <Compile Include="Exercicios Complementares\Exercicio5.cs" />
+    <Compile Include="Exercicios Complementares\Exercicio6.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
