--- a/Unidade6/Unidade6.csproj
+++ b/Unidade6/Unidade6.csproj
@@ -47,15 +47,14 @@
     <Compile Include="Exercicios Complementares\Exercicio4.cs" />
     <Compile Include="Exercicios Complementares\Exercicio5.cs" />
     <Compile Include="Exercicios Complementares\Exercicio6.cs" />
+    <Compile Include="Exercicios de Fixação\ExerciciosOperadoresRelacionais.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Exercicios de Fixação\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
