--- a/MedindoaFebreV/MedindoaFebreV.csproj
+++ b/MedindoaFebreV/MedindoaFebreV.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{291B2CFD-6423-4932-8353-5361B6B78CF0}</ProjectGuid>
+    <ProjectGuid>{DBB8A67B-B576-49F9-8F6D-240112E6A855}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Unidade6</RootNamespace>
-    <AssemblyName>Unidade6</AssemblyName>
+    <RootNamespace>MedindoaFebreV</RootNamespace>
+    <AssemblyName>MedindoaFebreV</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,21 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exercicios Complementares\Exercicio1.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio2.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio3.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio4.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio5.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio6.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio7.cs" />
-    <Compile Include="Exercicios de Fixação\ExerciciosOperadoresRelacionais.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Questao7.cs" />
+    <Compile Include="Questao8.cs" />
+    <Compile Include="Questao9.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
