--- a/Unidade7/Unidade7.csproj
+++ b/Unidade7/Unidade7.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExerciciosFixação\Exercicio1.cs" />
+    <Compile Include="ExerciciosFixação\Exercicio2.cs" />
+    <Compile Include="ExerciciosFixação\Exercicio3.cs" />
     <Compile Include="ExerciciosSlide\ExerciciosOperadoresRelacionais.cs" />
     <Compile Include="ExerciciosSlide\Exercicio1_OperadoresAritimeticos.cs" />
     <Compile Include="ExerciciosSlide\OperadoresTernarios.cs" />
