--- a/Unidade8/Unidade8.csproj
+++ b/Unidade8/Unidade8.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{291B2CFD-6423-4932-8353-5361B6B78CF0}</ProjectGuid>
+    <ProjectGuid>{89F75AD4-202F-4CFC-A1B7-3C0873D5A538}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Unidade6</RootNamespace>
-    <AssemblyName>Unidade6</AssemblyName>
+    <RootNamespace>Unidade8</RootNamespace>
+    <AssemblyName>Unidade8</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,15 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exercicios Complementares\Exercicio1.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio2.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio3.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio4.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio5.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio6.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio7.cs" />
-    <Compile Include="Exercicios Complementares\Exercicio8.cs" />
-    <Compile Include="Exercicios de Fixação\ExerciciosOperadoresRelacionais.cs" />
+    <Compile Include="ExerciciosSlide\AprovadoReprovado.cs" />
+    <Compile Include="ExerciciosSlide\VerificaValorProduto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
