--- a/MedindoaFebreVI/MedindoaFebreVIII.csproj
+++ b/MedindoaFebreVI/MedindoaFebreVIII.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89F75AD4-202F-4CFC-A1B7-3C0873D5A538}</ProjectGuid>
+    <ProjectGuid>{AEA43DD7-1F79-485F-8350-A6ABC97CCC30}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Unidade8</RootNamespace>
-    <AssemblyName>Unidade8</AssemblyName>
+    <RootNamespace>MedindoaFebreVI</RootNamespace>
+    <AssemblyName>MedindoaFebreVI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,21 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExerciciosSlide\ADivididoPorB.cs" />
-    <Compile Include="ExerciciosSlide\AprovadoReprovado.cs" />
-    <Compile Include="ExerciciosSlide\EscolheCaminho.cs" />
-    <Compile Include="ExerciciosSlide\InstrucoesdeRepeticao\DivideMaiorInteiro.cs" />
-    <Compile Include="ExerciciosSlide\InstrucoesdeRepeticao\Imprime100.cs" />
-    <Compile Include="ExerciciosSlide\InstrucoesdeRepeticao\Imprime100ExcetoMultiplo3.cs" />
-    <Compile Include="ExerciciosSlide\InstrucoesdeRepeticao\Repita5Vezes.cs" />
-    <Compile Include="ExerciciosSlide\VerificaValorProduto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
