--- a/Unidade7/Unidade7.csproj
+++ b/Unidade7/Unidade7.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="ExerciciosFixação1\Exercicio1.cs" />
     <Compile Include="ExerciciosFixação1\Exercicio2.cs" />
+    <Compile Include="ExerciciosFixação1\Exercicio3.cs" />
+    <Compile Include="ExerciciosFixação1\Exercicio4.cs" />
     <Compile Include="ExerciciosFixação\Exercicio1.cs" />
     <Compile Include="ExerciciosFixação\Exercicio2.cs" />
     <Compile Include="ExerciciosFixação\Exercicio3.cs" />
