--- a/Unidade7/Unidade7.csproj
+++ b/Unidade7/Unidade7.csproj
@@ -41,14 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExerciciosFixação1\Exercicio1.cs" />
-    <Compile Include="ExerciciosFixação1\Exercicio2.cs" />
-    <Compile Include="ExerciciosFixação1\Exercicio3.cs" />
-    <Compile Include="ExerciciosFixação1\Exercicio4.cs" />
-    <Compile Include="ExerciciosFixação1\Exercicio5.cs" />
     <Compile Include="ExerciciosFixação\Exercicio1.cs" />
     <Compile Include="ExerciciosFixação\Exercicio2.cs" />
     <Compile Include="ExerciciosFixação\Exercicio3.cs" />
+    <Compile Include="ExerciciosFixação\Exercicio4.cs" />
+    <Compile Include="ExerciciosFixação\Exercicio5.cs" />
     <Compile Include="ExerciciosSlide\ExerciciosOperadoresRelacionais.cs" />
     <Compile Include="ExerciciosSlide\Exercicio1_OperadoresAritimeticos.cs" />
     <Compile Include="ExerciciosSlide\OperadoresTernarios.cs" />
