--- a/Unidade6/Unidade6.csproj
+++ b/Unidade6/Unidade6.csproj
@@ -54,6 +54,8 @@
     <Compile Include="ExerciciosFixação2\Exercicio10.cs" />
     <Compile Include="ExerciciosFixação2\Exercicio2.cs" />
     <Compile Include="ExerciciosFixação2\Exercicio3.cs" />
+    <Compile Include="ExerciciosFixação2\Exercicio4.cs" />
+    <Compile Include="ExerciciosFixação2\Exercicio5.cs" />
     <Compile Include="ExerciciosFixação2\Exercicio8.cs" />
     <Compile Include="ExerciciosFixação2\Exercicio9.cs" />
     <Compile Include="Program.cs" />
