--- a/UnidadeComplementar/UnidadeComplementar.csproj
+++ b/UnidadeComplementar/UnidadeComplementar.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Exercicio1.cs" />
     <Compile Include="Exercicio2.cs" />
     <Compile Include="Exercicio3.cs" />
+    <Compile Include="Exercicio4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
