--- a/UnidadeComplementar/UnidadeComplementar.csproj
+++ b/UnidadeComplementar/UnidadeComplementar.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Exercicio2.cs" />
     <Compile Include="Exercicio3.cs" />
     <Compile Include="Exercicio4.cs" />
+    <Compile Include="Exercicio5.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
