--- a/UnidadeComplementar/UnidadeComplementar.csproj
+++ b/UnidadeComplementar/UnidadeComplementar.csproj
@@ -53,8 +53,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CSS\ExemploCSS.css" />
+    <Content Include="Web\ExemplosCSS.html" />
     <Content Include="Web\Exemplo.html" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
